fix(About Page): align titles vertically and horizontally with content

--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -1615,17 +1615,6 @@ div.interfaceLinks-row a {
   padding-inline-start: 30px;
   padding-inline-end: 30px;
 }
-#updatesPanelContent .readerNavMenu .content .contentInner {
-    margin-left: 200px;
-}
-#updatesPanelContent .navSideBar {
-    margin-left: 200px;
-}
-@media (max-width: 700px) {
-  #updatesPanelContent .readerNavMenu .content .contentInner {
-    margin-left: 0px;
-  }
-}
 .homeFeedWrapper .content .contentInner {
   max-width: none;
 }
